# Accent_evaluator

./: .dockerignore  .gitignore  DEPLOYMENT.md  Dockerfile  README.md  app.py  demo.py  docker-compose.yml  pyproject.toml  requirements.txt  test_setup.py
.streamlit/: config.toml
accent_evaluator/: __init__.py  accent.py  audio.py  config.py  llm.py  transcription.py  utils.py
