[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "accent-evaluator"
version = "1.0.0"
description = "English Accent Evaluator using OpenAI GPT-4"
requires-python = ">=3.9,<3.12"
dependencies = [
    "streamlit==1.28.1",
    "yt-dlp==2024.10.22",
    "pydub==0.25.1",
    "openai-whisper==20231117",
    "openai==1.3.8",
    "librosa==0.10.1",
    "numpy==1.24.3",
    "scipy==1.10.1",
    "scikit-learn==1.3.0",
    "requests>=2.32.2",
    "tenacity==8.2.3",
    "certifi>=2023.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "flake8",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["accent_evaluator*"] 